--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,9 @@
 
 {post_hooks, []}.
 
-{deps, [{prometheus_httpd, "2.1.11"}]}.
+{deps, [
+    {prometheus_httpd, {git, "https://github.com/bdt-group/prometheus-httpd", {branch, "fix/plugins"}}}
+]}.
 {shell, [{apps, [prometheus_cowboy]}]}.
 {cover_enabled, true}.
 {cover_export_enabled, true}.
@@ -26,7 +28,7 @@
                       {top_level_readme,
                        {"./README.md",
                         "https://github.com/deadtrickster/prometheus-cowboy"}}]}]},
-            {test, [{plugins, [{coveralls, "1.4.0"},
+            {test, [{project_plugins, [{coveralls, "1.4.0"},
                                {rebar3_elvis_plugin, "0.0.4"}]},
                     {erl_opts, [nowarn_export_all]}]},
             {cowboy1, [{ct_opts, [{dir, "./test/cowboy1"}]},
@@ -38,4 +40,4 @@
                                   {git, "https://github.com/julianduque/erlang-color",
                                    {branch, "master"}}}]}]}]}.
 
-{plugins, [{rebar3_archive_plugin, "0.0.1"}]}.
+{project_plugins, [{rebar3_archive_plugin, "0.0.1"}]}.
