--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {post_hooks, []}.
 
 {deps, [
-    {prometheus_httpd, {git, "https://github.com/bdt-group/prometheus-httpd", {branch, "fix/plugins"}}}
+    {prometheus_httpd, {git, "https://github.com/bdt-group/prometheus-httpd", {branch, "master"}}}
 ]}.
 {shell, [{apps, [prometheus_cowboy]}]}.
 {cover_enabled, true}.
